# UROP2017

.gazebo/: gui.ini
.gazebo/models/hokuyo/: model.sdf
.gazebo/models/pioneer2dx/: model.sdf  model_vel.sdf
.gazebo/models/simple_bot/: model.config  model.sdf
.gazebo/models/simple_gripper/: model.config  model.sdf
.gazebo/models/simple_quadruped/: model.config  model.sdf
.gazebo/models/velodyne/: model.config  model.sdf
path_plan/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
path_plan/src/: a_star.py  angle_test.py  grid_reader.py  q_node.py  test.py
ws/src/: README.md
ws/src/_config/: ros_local.sh  ros_remote_dbot2.sh  ros_remote_dbot3.sh
ws/src/_config/DDNS/: ping_dyndns_dbot3.sh
ws/src/_config/rviz/: neato_scan.rviz
ws/src/_config/vp_routers/: mc.cfg
ws/src/_scripts/: INSTALLME.sh  INSTALLME.sh~  README.md  gpp  gpp~
ws/src/launcher/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ws/src/launcher/launch/: bot.launch  dbot1.launch  dbot2.launch  dbot3.launch
ws/src/test/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ws/src/test/launch/: dbot3_teleop.launch
ws/src/test/src/: d_joystick1.py  d_joystick2.py
